en/0.x/_sources/facts/windows.rst.txt
Windows
-------

:code:`windows_aliases`
~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_aliases


Returns the Windows aliases.



:code:`windows_bios`
~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_bios


Returns the BIOS info.



:code:`windows_computer_info`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_computer_info


Returns the Windows info.



:code:`windows_date`
~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_date


Returns the current datetime on the server.



:code:`windows_home`
~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_home


Returns the home directory of the current user.



:code:`windows_hostname`
~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_hostname


Returns the current hostname of the server.



:code:`windows_hotfixes`
~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_hotfixes


Returns the Windows hotfixes.



:code:`windows_installer_applications`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_installer_applications


Returns the Windows installer applications.



:code:`windows_last_reboot`
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_last_reboot


Returns the date and time of the last reboot.



:code:`windows_local_drives_info`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_local_drives_info


Returns the Windows local drives info.



:code:`windows_local_groups`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_local_groups


Returns a list of groups on the system.



:code:`windows_logged_in_user_info`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_logged_in_user_info


Returns the Windows user logged in info.



:code:`windows_logon_session_info`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_logon_session_info


Returns the Windows user logon session info.



:code:`windows_network_configuration`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_network_configuration


Returns the Windows network configuration.



:code:`windows_os`
~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_os


Returns the OS name according to ``systeminfo``.



:code:`windows_os_version`
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_os_version


Returns the OS version according to ``systeminfo``.



:code:`windows_processes`
~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_processes


Returns the Windows processes.



:code:`windows_processors`
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_processors


Returns the processors info.



:code:`windows_service`
~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_service(name)


Returns info about a Windows service.



:code:`windows_services`
~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_services


Returns the Windows services.



:code:`windows_system_type`
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_system_type


Returns the system type according to ``systeminfo``.



:code:`windows_where`
~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.fact.windows_where(name)


Returns the full path for a command, if available.


