en/2.x/_sources/facts/windows.rst.txt
Windows Facts
-------------

:code:`windows.Aliases`
~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(Aliases)


Returns the Windows aliases.



:code:`windows.Bios`
~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(Bios)


Returns the BIOS info.



:code:`windows.ComputerInfo`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(ComputerInfo)


Returns the Windows info.



:code:`windows.Date`
~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(Date)


Returns the current datetime on the server.



:code:`windows.Home`
~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(Home)


Returns the home directory of the current user.



:code:`windows.Hostname`
~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(Hostname)


Returns the current hostname of the server.



:code:`windows.Hotfixes`
~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(Hotfixes)


Returns the Windows hotfixes.



:code:`windows.InstallerApplications`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(InstallerApplications)


Returns the Windows installer applications.



:code:`windows.LastReboot`
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(LastReboot)


Returns the date and time of the last reboot.



:code:`windows.LocalDrivesInfo`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(LocalDrivesInfo)


Returns the Windows local drives info.



:code:`windows.LocalGroups`
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(LocalGroups)


Returns a list of groups on the system.



:code:`windows.LoggedInUserInfo`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(LoggedInUserInfo)


Returns the Windows user logged in info.



:code:`windows.LogonSessionInfo`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(LogonSessionInfo)


Returns the Windows user logon session info.



:code:`windows.NetworkConfiguration`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(NetworkConfiguration)


Returns the Windows network configuration.



:code:`windows.Os`
~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(Os)


Returns the OS name according to ``systeminfo``.



:code:`windows.OsVersion`
~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(OsVersion)


Returns the OS version according to ``systeminfo``.



:code:`windows.Processes`
~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(Processes)


Returns the Windows processes.



:code:`windows.Processors`
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(Processors)


Returns the processors info.



:code:`windows.Service`
~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(Service, name)


Returns info about a Windows service.



:code:`windows.Services`
~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(Services)


Returns the Windows services.



:code:`windows.SystemType`
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(SystemType)


Returns the system type according to ``systeminfo``.



:code:`windows.Where`
~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(Where, name)


Returns the full path for a command, if available.


